Get rid of new Integer() calls